k8s/worker-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  selector:
    matchLabels:
      component: worker
  replicas: 3
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
      - name: client
        image: samor412/multi-client
        ports:
          - containerPort: 3000
