k8s/client-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
  - port: 3000
    targetPort: 3000
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  selector:
    matchLabels:
      component: web
  replicas: 3
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
      - name: client
        image: samor412/multi-client
        ports:
          - containerPort: 3000
