k8s/server-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
  - port: 5000
    targetPort: 5000
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-deployment
spec:
  selector:
    matchLabels:
      component: server
  replicas: 3
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
      - name: server
        image: samor412/multi-server
        ports:
          - containerPort: 5000
